--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "element3": "^0.0.40",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
