--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@vue/eslint-config-standard": "^6.1.0",
     "element3": "^0.0.40",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
@@ -15,6 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-vue": "^8.5.0",
     "less": "^4.1.2",
     "vite": "^2.8.0"
   }
