--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@vue/eslint-config-standard": "^6.1.0",
     "element3": "^0.0.40",
+    "eslint": "^8.12.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.5.0",
     "less": "^4.1.2",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   }
 }
