--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
     "@vue/eslint-config-standard": "^6.1.0",
     "element3": "^0.0.40",
     "eslint": "^8.12.0",
+    "path-browserify": "^1.0.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
