--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,6 +13,7 @@
     "element3": "^0.0.40",
     "eslint": "^8.12.0",
     "path-browserify": "^1.0.1",
+    "path-to-regexp": "^6.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
