--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "cross-env NODE_ENV=development vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue src"
@@ -12,6 +12,7 @@
     "@vue/eslint-config-standard": "^6.1.0",
     "element3": "^0.0.40",
     "eslint": "^8.12.0",
+    "mockjs": "^1.1.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.0",
     "vue": "^3.2.25",
@@ -21,11 +22,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-plugin-vue": "^8.5.0",
     "less": "^4.1.2",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
